[package]
name = "dashtable"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-performance segmented hash table inspired by DragonflyDB"

[features]
default = ["simd"]
simd = []  # SIMD fingerprint matching

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

# [[bench]]
# name = "comparison"
# harness = false
